--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -1,4 +1,3 @@
-/* Milligram overrides */
 :root {
     /* The following are official CakePHP colors */
     --color-cakephp-red: #d33c43;
@@ -99,9 +98,14 @@ h2.label {
 /* Utility */
 table {
     width: 100%;
+    border-collapse: collapse;
 }
 table p {
     margin: 0;
+}
+table td, table th {
+    border: 1px solid var(--color-lightgray);
+    padding: 6px 10px;
 }
 .view table {
     width: auto;
@@ -125,7 +129,6 @@ table p {
 }
 .actions a {
     font-weight: bold;
-    /* padding: 0 0.4rem; */
     display: block;
 }
 th {
@@ -242,7 +245,12 @@ input[type='datetime-local'] {
     display: block;
     max-width: 450px;
 }
-
+.show-password {
+    margin-bottom: 10px;
+}
+.show-password label {
+    display: inline;
+}
 /* Paginator */
 .paginator {
     text-align: right;
@@ -334,9 +342,6 @@ input[type='datetime-local'] {
 }
 
 /* Forms */
-.nav .button {
-    margin-right: 1em;
-}
 .content .form-inline .form-control {
     min-width: 7em;
 }
@@ -360,4 +365,32 @@ footer img {
 }
 footer img[alt="CakePHP"] {
     max-height: 25px;
+    vertical-align: super;
 }
+/*
+@media (prefers-color-scheme: dark) {
+    body, .content, h1, h2, h3, h4, h5, h6, input {
+        background: var(--color-cakephp-gray);
+        color: white;
+    }
+    nav h1 {
+        background: none;
+    }
+    fieldset {
+        border-color: var(--color-lightgray);
+    }
+    a,
+    a:hover,
+    a:focus,
+    a:active,
+    .side-nav a
+    th a,
+    .actions a,
+    .side-nav a:hover,
+    .side-nav a:focus,
+    .actions a:hover,
+    .actions a:focus {
+        color: var(--color-cakephp-lightblue);
+    }
+
+}*/
