--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -97,18 +97,39 @@ h2.label {
 
 /* Utility */
 table {
-    width: 100%;
     border-collapse: collapse;
+    width: 100%;
+    border-right: 2em solid transparent;
 }
 table p {
     margin: 0;
-}
+} 
 table td, table th {
+    padding: 8px 12px;
+    white-space:nowrap;
+    text-align: center;
+}
+table th {
+    position: sticky;
+    top: 50px;
+    background: var(--color-main-bg);
+}
+table td {
     border: 1px solid var(--color-lightgray);
-    padding: 6px 10px;
+    border-width: 1px 0;
 }
 .view table {
     width: auto;
+}
+.view table th {
+    border: 1px solid var(--color-lightgray);
+    border-width: 1px 0;
+    position: static;
+    background: none;
+    text-align: left;
+}
+.view table td {
+    text-align: left;
 }
 
 /* Main */
