Add Relatorios model, policy, and CRUD views
Introduces Relatorio entity, RelatoriosTable, and RelatorioPolicy for authorization. Adds CRUD templates and controller logic for Relatorios, including associations with Users and Instituicoes. Also refactors display fields and validation for several models, improves form labels and button texts, and updates templates for consistency and clarity.

--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -99,13 +99,13 @@ h2.label {
 table {
     border-collapse: collapse;
     width: 100%;
-    border-right: 2em solid transparent;
+    border-right: 1rem solid transparent;
 }
 table p {
     margin: 0;
 } 
 table td, table th {
-    padding: 8px 12px;
+    padding: 10px 5px;
     white-space:nowrap;
     text-align: center;
 }
@@ -118,8 +118,15 @@ table td {
     border: 1px solid var(--color-lightgray);
     border-width: 1px 0;
 }
+table td:last-child {
+    max-width: 400px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .view table {
     width: auto;
+    min-width: 450px;
+    margin-left: 1rem;
 }
 .view table th {
     border: 1px solid var(--color-lightgray);
@@ -131,10 +138,16 @@ table td {
 .view table td {
     text-align: left;
 }
-
+.view table td:last-child {
+    overflow: initial;
+    white-space: normal;
+}
 /* Main */
 .content {
-    padding: 2rem;
+    padding: 1rem;
+}
+.content.home {
+    padding: 1rem 2rem;
 }
 .content h3,
 .content h4 {
@@ -187,6 +200,9 @@ th {
 }
 .related {
     margin-top: 2rem;
+}
+.edit fieldset {
+    width: 450px;
 }
 
 /* Flash messages */
@@ -370,7 +386,7 @@ footer {
 }
 footer img {
     margin-right: 4em;
-    max-height: 30px;
+    max-height: 26px;
 }
 footer img[alt="CakePHP"] {
     max-height: 25px;
