--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -27,7 +27,7 @@ hr {
 }
 body .button {
     padding: 10px 16px;
-    margin: 0 8px 0 0;
+    margin: 0 8px 8px 0;
     border-radius: 4px;
     color: white;
     text-decoration: none;
@@ -35,7 +35,7 @@ body .button {
     border: 0;
     box-sizing:border-box;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
 }
 body .button:hover,
 body .button:active {
@@ -52,6 +52,7 @@ body .button:active {
 .nav {
     margin-bottom: 8px;
     display: flex;
+    flex-wrap: wrap;
 }
 .message p {
     margin: 0;
@@ -73,8 +74,8 @@ body .button:active {
 .content .input select {
     margin-bottom: 1em;
 }
-.content .add .input input,
-.content .add .input select {
+.content.add .input input,
+.content.add .input select {
     width: 450px;
 }
 
