Add homepage image and improve layout styles
Added metabkg.jpg to the homepage and updated home.php to display the image. Improved layout by introducing .row flex styling and .rounded image corners in CSS for a more polished appearance.

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -211,6 +211,9 @@ label,legend {
 #url-rewriting-warning {
     display: none;
 }
+.row {
+    display: flex;
+}
 .col {
     padding: 1em;
     display: grid;
