--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -95,6 +95,10 @@ h2.label {
     font-size: 16px;
 }
 
+.rounded {
+    border-radius:4px;
+}
+
 /* Utility */
 table {
     border-collapse: collapse;
