--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -112,6 +112,10 @@ table td, table th {
     padding: 10px 5px;
     white-space:nowrap;
     text-align: center;
+    border: 1px solid var(--color-lightgray);
+    border-left-color: #ddd;
+    border-right-color: #ddd;
+    border-width: 1px;
 }
 table th {
     position: sticky;
@@ -119,8 +123,6 @@ table th {
     background: var(--color-main-bg);
 }
 table td {
-    border: 1px solid var(--color-lightgray);
-    border-width: 1px 0;
 }
 table td:last-child {
     max-width: 400px;
