--- a/webroot/css/nav.css
+++ b/webroot/css/nav.css
@@ -1,9 +1,12 @@
 body {
-    margin-top: 50px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction:column;
 }
 #content {
-    margin: 0 auto;
-    min-height: calc(100vh - 101px);
+  margin: 0 auto;
+  min-height: calc(100vh - 101px);
+  flex: 1;
 }
 nav {
   font-family: 'Raleway', sans-serif;
@@ -174,30 +177,21 @@ nav menu li menu li a {
   }
   nav .toggle-input:checked ~ .responsive-toggle-dropdown {
     display: block;
+    position: fixed;
+    top: 50px;
+    right: 0;
+    width: 100%;
   }
-}
-
-/* SMALL TABLET LESS ONLY */
-@media only screen and (max-width: 1100px) {
-  body {
-      margin-top: 50px;
-  }
-  #content {
-      min-height: calc(100vh - 110px);
   }
 }
 
 /* LARGE TABLET MORE ONLY */
-@media only screen and (min-width: 1100px) {
-  .content {
-    margin-bottom: 1em;
-  }
+@media only screen and (min-width: 1050px) {
   nav .menu-user .toggle-input:not(checked) ~ .toggle-dropdown {
     display: inline;
     right: 0;
     height: 50px;
   }
-  
   nav .menu-user {
     text-align: right;
   }
