--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -240,7 +240,8 @@ footer {
     background: #2b6c9c;
     color: #fff;
     padding: 8px 0 2px;
-    box-shadow: 96vw 0 0 0 #2b6c9c, 0 33px 0 0 #2b6c9c, 96vw 33px 0 0 #2b6c9c;
-    height: 34px;
+    height: 36px;
     box-sizing: border-box;
+    border-radius: 0 40px 0 0;
+    box-shadow: 0 36px 0 0 #2b6c9c;
 }
