--- a/webroot/css/nav.css
+++ b/webroot/css/nav.css
@@ -5,7 +5,7 @@ body {
 }
 #content {
   margin: 0 auto;
-  min-height: calc(100vh - 101px);
+  min-height: calc(100svh - 101px);
   flex: 1;
 }
 nav {
@@ -181,7 +181,8 @@ nav menu li menu li a {
     top: 50px;
     right: 0;
     width: 100%;
-  }
+    padding: 0 1rem;
+    box-sizing: border-box;
   }
 }
 
